--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.10.13"
+    "mongoose": "^5.10.13",
+    "nodemon": "^2.0.6"
   },
   "devDependencies": {},
   "scripts": {
