--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.8.4",
     "axios": "^0.21.0",
+    "highcharts": "^8.2.2",
+    "highcharts-react-official": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
