--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.13",
     "nodemon": "^2.0.6"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon server/index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
